# traversability_estimation

./: README.md
traversability_estimation/: CMakeLists.txt  package.xml
traversability_estimation/config/: robot.yaml  robot_filter_parameter.yaml  robot_footprint_parameter.yaml
traversability_estimation/config/visualization/: traversability.yaml
traversability_estimation/include/traversability_estimation/: TraversabilityEstimation.hpp  TraversabilityMap.hpp
traversability_estimation/launch/: traversability_estimation.launch.py  visualization.launch.py  yaml_parsing.launch.py
traversability_estimation/src/: TraversabilityEstimation.cpp  TraversabilityMap.cpp  test_yaml_parsing.cpp  traversability_estimation_node.cpp
traversability_estimation_filters/: CMakeLists.txt  filter_plugins.xml  package.xml
traversability_estimation_filters/include/filters/: RoughnessFilter.hpp  SlopeFilter.hpp  StepFilter.hpp
traversability_estimation_filters/src/: RoughnessFilter.cpp  SlopeFilter.cpp  StepFilter.cpp
traversability_msgs/: CMakeLists.txt  package.xml
