<?xml version="1.0"?>
<package format="3">
  <name>traversability_estimation</name>
  <version>0.4.0</version>
  <description>ROS package for estimating traversability from elevation maps.</description>
  <maintainer email="pfankhauser@anybotics.com">Peter Fankhauser</maintainer>
  <author email="martiwer@student.ethz.ch">Martin Wermelinger</author>
  <author email="pfankhauser@anybotics.com">Peter Fankhauser</author>
  <author email="ralf.kaestner@gmail.com">Ralf Kaestner</author>
  <license>MIT</license>
  <url type="website">https://github.com/ethz-asl/traversability_estimation</url>
  <url type="bugtracker">https://github.com/ethz-asl/traversability_estimation/issues</url>

  <buildtool_depend>ament_cmake</buildtool_depend>

  <depend>rclcpp</depend>
  <depend>tf2_ros</depend>
  <depend>tf2_eigen</depend>
  <depend>grid_map_ros</depend>
  <depend>grid_map_core</depend>
  <depend>grid_map_msgs</depend>
  <depend>grid_map_filters</depend>
  <depend>traversability_msgs</depend>
  <depend>traversability_estimation_filters</depend>
  <depend>filters</depend>
  <depend>std_msgs</depend>
  <depend>geometry_msgs</depend>
  <depend>sensor_msgs</depend>
  <!-- <depend>param_io</depend> -->
  <!-- <depend>xmlrpcpp</depend> -->
  <depend>eigen3_cmake_module</depend>
  <depend>kindr</depend>
  <!-- Test dependencies
  <test_depend>ament_lint_auto</test_depend>
  <test_depend>ament_lint_common</test_depend> -->

  <export>
    <build_type>ament_cmake</build_type>
  </export>
</package>
